<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.harvis.fitnessapp.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/variantsFragment"
        android:name="com.harvis.fitnessapp.ui.variants.VariantsFragment"
        android:label="@string/nav_variants"
        tools:layout="@layout/fragment_variants">

        <action
            android:id="@+id/action_variants_to_variantDetail"
            app:destination="@id/variantDetailFragment" />

        <action
            android:id="@+id/action_variants_to_exercises"
            app:destination="@id/exercisesFragment" />
    </fragment>

    <fragment
        android:id="@+id/variantDetailFragment"
        android:name="com.harvis.fitnessapp.ui.variants.VariantDetailFragment"
        android:label="Detail varianty"
        tools:layout="@layout/fragment_variant_detail">

        <argument
            android:name="variantId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/exercisesFragment"
        android:name="com.harvis.fitnessapp.ui.exercises.ExercisesFragment"
        android:label="@string/nav_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/workoutFragment"
        android:name="com.harvis.fitnessapp.ui.workout.WorkoutFragment"
        android:label="@string/nav_workout"
        tools:layout="@layout/fragment_workout">

        <argument
            android:name="variantId"
            app:argType="long"
            android:defaultValue="0L" />

        <argument
            android:name="workoutLogId"
            app:argType="long"
            android:defaultValue="0L" />

        <argument
            android:name="viewOnly"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.harvis.fitnessapp.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_history_to_workout"
            app:destination="@id/workoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.harvis.fitnessapp.ui.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics">

        <action
            android:id="@+id/action_statistics_to_exerciseStats"
            app:destination="@id/exerciseStatsFragment" />
    </fragment>

    <fragment
        android:id="@+id/exerciseStatsFragment"
        android:name="com.harvis.fitnessapp.ui.statistics.ExerciseStatsFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_exercise_stats">

        <argument
            android:name="exerciseId"
            app:argType="long" />
    </fragment>

</navigation>
